{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e1c0520a-6332-4a7d-9a23-917885333464",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "9d9f7587-841c-4351-812a-9bc0fc6e59f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "fa629d71-2581-4047-aab2-5b52e4221b8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba49eb1d-baae-4169-a172-e8b74c60d250",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "422f4ef3-f071-4391-bbf9-a86b5bded9be",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52cec808-cd6a-4d2c-b453-b470a1380697",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dc8b142-cb9e-4bcc-9210-590c0150e2be",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}